@@ -2,6 +2,7 @@ package som.vm;
 
 import java.io.File;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -18,7 +19,6 @@ import bd.primitives.PrimitiveLoader;
 import bd.primitives.Specializer;
 import som.VM;
 import som.compiler.AccessModifier;
-import som.compiler.MethodBuilder;
 import som.interpreter.SomLanguage;
 import som.interpreter.nodes.ArgumentReadNode.LocalArgumentReadNode;
 import som.interpreter.nodes.ExpressionNode;
@@ -77,8 +77,10 @@ public final class ExtensionLoader extends PrimitiveLoader<VM, ExpressionNode, S
     Class<?> ext;
     try {
       ext = moduleJar.loadClass(extensionClassName);
-      return (Extension) ext.newInstance();
-    } catch (IllegalAccessException | InstantiationException | ClassNotFoundException e) {
+      return (Extension) ext.getConstructor().newInstance();
+    } catch (IllegalAccessException | InstantiationException | ClassNotFoundException
+        | IllegalArgumentException | InvocationTargetException | NoSuchMethodException
+        | SecurityException e) {
       throw new RuntimeException(e);
     }
   }
@@ -108,14 +110,12 @@ public final class ExtensionLoader extends PrimitiveLoader<VM, ExpressionNode, S
   private SInvokable constructPrimitive(final SSymbol signature,
       final Specializer<VM, ExpressionNode, SSymbol> specializer, final SomLanguage lang) {
     CompilerAsserts.neverPartOfCompilation("This is only executed during bootstrapping.");
-    assert signature.getNumberOfSignatureArguments() >= 1
-        : "Primitives should have at least a receiver";
+    assert signature.getNumberOfSignatureArguments() >= 1 : "Primitives should have at least a receiver";
 
     // ignore the implicit vmMirror argument
     final int numArgs = signature.getNumberOfSignatureArguments();
 
     Source s = SomLanguage.getSyntheticSource(moduleName, specializer.getName());
-    MethodBuilder prim = new MethodBuilder(true, lang, null);
     ExpressionNode[] args = new ExpressionNode[numArgs];
 
     SourceSection source = s.createSection(1);
@@ -128,7 +128,7 @@ public final class ExtensionLoader extends PrimitiveLoader<VM, ExpressionNode, S
     String name = moduleName + ">>" + signature.toString();
 
     som.interpreter.Primitive primMethodNode = new som.interpreter.Primitive(name,
-        primNode, prim.getScope().getFrameDescriptor(),
+        primNode,
         (ExpressionNode) primNode.deepCopy(), false, lang);
     return new SInvokable(signature, AccessModifier.PUBLIC, primMethodNode, null);
   }
